# Full-Duplex-Bench

./: .gitignore
v1_v1.5/: .dockerignore  Dockerfile  mise.toml  pyproject.toml
v1_v1.5/evaluation/: eval_backchannel.py  eval_behavior.py  eval_general_before_after.py  eval_pause_handling.py  eval_smooth_turn_taking.py  eval_user_interruption.py  icc_gt_distribution.json  significance_test.py
v1_v1.5/get_transcript/: asr.py
v1_v1.5/model_inference/freeze-omni/: backchannel.py  pause_handling.py  smooth_turn_taking.py  user_interruption.py
v1_v1.5/model_inference/freeze-omni/web/: pem.py
v1_v1.5/model_inference/gemini/: inference_gemini25_native.py
v1_v1.5/model_inference/gpt-realtime/: cli.js  inference.sh  package.json
v1_v1.5/model_inference/sonic/: inference.py
v2/eval/: asr_batch.py  cleanup_sessions.py  eval_single_item.py  trim_combined_wavs.py  write_prompts_json.py
v2/scoring/: parse.py  score.py  score_time.py
