[project]
name = "v1-v1-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
  "accelerate>=0.26.0",
  "cryptography>=46.0.5",
  "datasets>=4.7.0",
  "flask>=3.1.3",
  "flask-socketio>=5.6.1",
  "google-genai>=1.66.0",
  "loguru>=0.7.3",
  "nemo-toolkit[asr]>=2.7.0",
  "numpy>=2.4.3",
  "openai>=2.26.0",
  "python-dotenv>=1.2.2",
  "pyyaml>=6.0.3",
  "scipy>=1.17.1",
  "silero-vad>=6.2.1",
  "soundfile>=0.13.1",
  "sphn==0.1.12",
  "statsmodels>=0.14.6",
  "torch==2.10.0",
  "torchaudio>=2.10.0",
  "torchcodec>=0.10.0",
  "tqdm>=4.67.3",
  "transformers>=4.57.6",
  "utmosv2",
]

[tool.uv.sources]
utmosv2 = { git = "https://github.com/sarulab-speech/UTMOSv2.git" }
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
